# langchain-code

./: .gitignore  Dockerfile  MANIFEST.in  README.md  README.pypi.md  config.py  contextual_bandit.mmd  demo.py  dummy_notebook.ipynb  hybrid_router.mmd  llm_routing_logic.mmd  logic_flow.md  pyproject.toml  rule_based_router.mmd  task_analyzer.mmd
.github/workflows/: docker-build.yml  docker-compose.yml
.langcode/: .langcode.md.un~  langcode.md~  mcp.json
.langcode/tmp_scripts/: snippet_1756245637830.py  snippet_1756246006910.py  snippet_1756246827379.py  snippet_1756247127321.py
assets/: architecture.mmd  llm_routing_logic.mmd
docs/: CONTRIBUTING.md  cli.md  commands.md  config.md  deep_agents.md  deepagents.md  index.md  mcp_loader.md  memory.md  safety.md  tools.md  workflows.md
docs/agent/: deep.md  react.md  router.md
docs/workflows/: feature_impl.md
src/langchain_code/: cli.py  cli_beta.py  config.py  config_core.py  hooks.py  mcp_loader.py  static_values.py
src/langchain_code/agent/: bootstrap.py  deep.py  deep_agents.py  react.py  router.py  state.py  subagents.py
src/langchain_code/cli/: __init__.py  constants_runtime.py  entrypoint.py
src/langchain_code/cli/commands/: chat.py  configure.py  flows.py  system.py
src/langchain_code/cli_components/: __init__.py  agents.py  app.py  constants.py  display.py  editors.py  env.py  instructions.py  launcher.py  mcp.py  runtime.py  state.py  todos.py
src/langchain_code/config/: mcp.json~
src/langchain_code/safety/: confirm.py
src/langchain_code/tools/: fs_local.py  git_tools.py  mermaid.py  planner.py  processor.py  script_exec.py  search.py  shell.py
src/langchain_code/workflows/: auto.py  base_system.py  bug_fix.py  feature_impl.py
src/tests/: router_test.py
tests/: test_feature_flags.py
