[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-code"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "typer==0.12.3",
    "rich==13.7.1",
    "python-dotenv==1.0.1",
    "langchain>=0.2.12",  # Let pip resolve compatible versions
    "langchain-community>=0.2.10",
    "langchain-anthropic>=0.2.4",
    "langchain-google-genai>=2.0.4",
    "pydantic==2.7.4",
    "ruamel.yaml==0.18.6",
    "pyfiglet==1.0.4",
]

[project.scripts]
langcode = "langchain_code.cli:main"
